test-suite/output/ErrorLocation_ltac_1.out
File "./output/ErrorLocation_ltac_1.v", line 2, characters 7-11:
Error: Tactic failure: Cannot solve this goal.

