test-suite/output/ErrorLocation_ltac_1.v
Goal False.
idtac; easy.
Abort.
